--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
   },
   "dependencies": {
     "hexo": "^6.3.0",
+    "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^3.0.0",
+    "hexo-generator-searchdb": "^1.4.1",
     "hexo-generator-tag": "^2.0.0",
+    "hexo-next-darkmode": "^0.1.10",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-symbols-count-time": "^0.7.1",
+    "hexo-theme-landscape": "^0.0.3",
+    "hexo-theme-next": "^8.13.2",
+    "hexo-word-counter": "^0.1.0"
   }
 }
