--- a/_config.next.yml
+++ b/_config.next.yml
@@ -142,7 +142,7 @@ sidebar:
 avatar:
   # Replace the default image and set the url here.
   #url: /images/avatar.gif
-  url: /images/avatar.jpg
+  url: /assets/images/avatar.jpg
   # If true, the avatar will be displayed in circle.
   rounded: false
   # If true, the avatar will be rotated with the cursor.
