--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ timezone: Asia/Shanghai
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://gerry-gqj.github.io/blog-notes
+# url: https://gerry-gqj.github.io/blog-notes
+url: http://blog.qibria.xyz/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
